# tauri-plugin-iap

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json
android/: build.gradle.kts
android/src/androidTest/java/: BillingManagerInstrumentedTest.kt  IapInstrumentedTest.kt
android/src/main/java/: Iap.kt  IapPlugin.kt
android/src/test/java/: IapUnitTest.kt
docs/: implementation_plan.md  tauri_plugin_iap_design.md
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: README.md
ios/Sources/: IapPlugin.swift
ios/Tests/PluginTests/: IapPluginTests.swift  PluginTests.swift  README.md
ios/Tests/PluginTests/Mocks/: MockStoreKit.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: buy_consumable.toml  buy_non_consumable.toml  complete_purchase.toml  country_code.toml  query_product_details.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
